--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "AngBasics": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "AngBasics"
+    }
+  },
+  "defaultProject": "AngBasics",
+  "cli": {
+    "analytics": "e8d02280-b414-4482-af5b-a88d83645fbd"
+  }
 }
